# ai-maestro-web-scenario-tester

./: .gitignore  .mega-linter.yml  CHANGELOG.md  LICENSE  README.md  cliff.toml  pyproject.toml  web-scenario-tester.agent.toml
.claude-plugin/: plugin.json
.github/workflows/: ci.yml  notify-marketplace.yml  release.yml
agents/: amwst-parallel-tester-agent.md  amwst-parallel-worker-agent.md  amwst-scenario-improvement-implementer.md  amwst-scenario-proposer.md  amwst-scenario-runner.md  web-scenario-tester-main-agent.md
examples/scenarios/: SCEN-001_example-smoke.scen.md  SCEN-002_example-form-flow.scen.md
hooks/: hooks.json
references/: SCENARIOS_TESTS_RULES.md  project-helpers-template.sh  scenario-runner-protocol.md  scenarios.config.README.md  scenarios.config.template.json  token-discipline.md  write-guard-rule.md
scripts/: amwst-leantool.py  amwst-scenario-step.sh  amwst-validate-scenario.py  amwst_subagent-write-guard.sh  amwst_subagent-write-guard.sh.template  compress-screenshots.sh  generate-consolidated-proposals.sh  init-scenarios-folder.sh  master-cleanup.sh  publish.py  scenario-restore.sh  scenario-setup.sh  state-machine-tick.sh
skills/amwst-create-scenario/: SKILL.md
skills/amwst-edit-scenario/: SKILL.md
skills/amwst-implement-scenarios-proposals/: SKILL.md
skills/amwst-improve-scenario/: SKILL.md
skills/amwst-phase-execute/: SKILL.md
skills/amwst-phase-fixasyougo/: SKILL.md
skills/amwst-phase-proposals/: SKILL.md
skills/amwst-region-capture/: SKILL.md
skills/amwst-run-scenario/: SKILL.md
tests/: test_validate_scenario.py
(+13 files in other folders)
