[project]
name = "web-scenario-tester-scripts"
version = "0.1.3"
description = "Helper scripts for the web-scenario-tester plugin: scenario validation and lean tool-output wrappers (amwst-validate-scenario.py, amwst-leantool.py)."
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest",
    # pytest-split provides the --splits/--group flags ci.yml's test matrix
    # shards with (TRDD-K7P2XR4Q). Without it every CI test leg dies with
    # "unrecognized arguments: --splits --group" (pytest exit 4) — the exact
    # red run 28959141245. Local `publish.py --gate` runs pytest WITHOUT
    # shard flags, so only CI catches its absence.
    "pytest-split",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Helper scripts only — no importable package; ship the scripts dir as-is.
include = ["scripts"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # canonical publish.py template carries >120-char lines by design
